# epub-query

./: README.md  pyproject.toml
src/epub_query/: __init__.py  cli.py  parser.py  query.py
