[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epub-query"
version = "0.1.0"
description = "A tool for querying and searching epub files"
requires-python = ">=3.10"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
epub-query = "epub_query.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/epub_query"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
